aws-deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brd-loancrm
  labels:
    name: brd-loancrm
    environment: production
